syntax = "proto3";
package com.example.newswatchdog.grpc;
option java_multiple_files = true;

message UserName{
  string userName = 1;
}

message Empty {}

service ChangedUserSettingsService {

  rpc sendChangedUserSettings(UserName) returns (Empty);
  rpc reciveChangedUserSettings(Empty) returns (UserName);

}